<resources>
    <string name="app_name">Sneakers App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sneakership">Sneakership</string>
    <string name="popular">Popular</string>
    <string name="size">Size (uk) :</string>
    <string name="colour">Colour :</string>
    <string name="price">Price :</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="order_details">Order Details</string>
    <string name="subtotal">Sub Total :</string>
    <string name="taxes_and_charges">Taxes and Charges</string>
    <string name="total">Total</string>
    <string name="checkout">Check Out</string>
</resources>