<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.view.CartFragment">

        <ImageView
            android:id="@+id/iv_cart_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back_orange"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_cart_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:text="@string/cart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_no_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="No Cart Item"
                android:textSize="18sp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cart_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cart_tittle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart_sneakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_sneakers_cart" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_order_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="@string/order_details"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/ll_subtotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_details"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/subtotal"
                    android:textSize="18sp"

                    android:textColor="@color/text_color_grey"/>

                <TextView
                    android:id="@+id/tv_subtotal_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/text_color_grey"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_taxes_and_charges"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_subtotal"
                android:layout_marginTop="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_taxes_and_charges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/taxes_and_charges"
                    android:textSize="18sp"
                    android:textColor="@color/text_color_grey"/>

                <TextView
                    android:id="@+id/tv_taxes_and_charges_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="$40"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/text_color_grey"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_taxes_and_charges"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp">

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_grey"/>

                <TextView
                    android:id="@+id/tv_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/orange"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_curved_rectangle_filled"
                android:text="@string/checkout"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/ll_price"
                app:layout_constraintTop_toTopOf="@+id/ll_price"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>