<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.view.SneakerDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back_orange"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/tabLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_back"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="200dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_viewPager"
            android:orientation="horizontal"
            android:background="@drawable/custom_background">

            <TextView
                android:id="@+id/tv_sneaker_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="Nike Air Max"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_sneaker_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="Sed ut perspiciatis omnis iste natus error."
                android:textSize="14sp"
                android:textColor="@color/text_color_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sneaker_tittle"/>

            <LinearLayout
                android:id="@+id/ll_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sneaker_description"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_sneaker_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/size"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_grey"/>

                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_rectangle_selector"
                    android:text="7"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/orange"/>

                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_rectangle_selector"
                    android:text="8"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/orange"/>

                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_rectangle_selector"
                    android:text="9"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/orange"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_size"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_sneaker_colour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/colour"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_grey"/>

                <Button
                    android:id="@+id/btn_pink"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_pink_button_selector"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/orange"/>

                <Button
                    android:id="@+id/btn_dark_blue"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_dark_blue_button_selector"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/orange"/>

                <Button
                    android:id="@+id/btn_light_blue"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_light_blue_button_selector"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/orange"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_color"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_sneaker_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/price"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_grey"/>

                <TextView
                    android:id="@+id/tv_sneaker_price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="$199"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/orange"/>

                <Button
                    android:id="@+id/btn_add_to_cart"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_curved_rectangle_filled"
                    android:text="@string/add_to_cart"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>